--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    compile group: 'com.squareup.okhttp', name: 'logging-interceptor', version: '2.7.5'
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.6'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.squareup.okhttp', name: 'logging-interceptor', version: '2.7.5'
 }
 
 compileKotlin {
